# notion-videogames

./: .editorconfig  .flake8  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
notion_videogames/: custom_notion.py  hltb_notion.py  igdb_notion.py  igdb_proto.py  main.py  notion.py  steamspy_notion.py
